# knights-vs-slimes

./: .gitignore  default_bus_layout.tres  export_presets.cfg  icon.svg.import  script.py
godot/: FirstRustyGame.gdextension  export_presets.cfg  player_rs.tscn  project.godot
godot/assets/images/: background-img.webp.import
godot/assets/sprites/: BirdSprite.png.import  BirdSpriteBig.png.import  dark_knight.png.import
godot/database/: 000054.sst  000057.sst  000062.sst  000067.sst  IDENTITY  MANIFEST-000069
godot/scenes/: coin.tscn  game.tscn  hud.tscn  killzone.tscn  level_1.tscn  menu.tscn  music.tscn  player.tscn  slime.tscn
godot/scenes/enemies/: bird_enemy.tscn  enemy_knight.tscn
godot/scripts/: bird_enemy_manager.gd  bird_target_zone.gd  enemy_knight.gd  game_manager.gd  killzone.gd  map.gd  menu.gd  player_animator.gd  slime.gd  ui.gd
rust/: Cargo.toml
rust/src/: database_node.rs  killzone.rs  lib.rs  player.rs
scenes/: coin.tscn  game.tscn  killzone.tscn  platform.tscn  player.tscn
scripts/: player.gd
