[package]
name = "first_rusty_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
surrealdb = { version =  "1.5.1", features = ["kv-rocksdb"], optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
once_cell = { version =  "1.19.0", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }

[features]
default = ["gdext"]
db = ["dep:surrealdb", "dep:once_cell", "tokio", "serde"]
tokio = ["dep:tokio"]
serde = ["dep:serde"]
gdext = []